--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-   "name": "gifted-md",
+   "name": "𝙆𝙄𝙉𝙂 𝙄𝘽𝙍𝘼𝙃𝙄𝙈 𝙈𝘿",
    "version": "1.2.8-api",
-   "description": "Multi device whatsapp bot developed by GiftedTech.",
+   "description": "Multi device whatsapp bot developed by king Ibrahim.",
    "main": "lib/client.js",
    "type": "commonjs",
    "engines" : { "node": "v18.16.0", "npm": "9.5.1" },
@@ -10,7 +10,7 @@
              "stop": "pm2 stop Suhail"             
    },
    "keywords": ["whatsapp bot md","whatsapp bot","sc bot","sc wa bot","suhail md","suhail whatsapp bot","Suhail md bot","multidevice","baileys bot"],
-   "author": "GiftedTech",
+   "author": "IBRAHIM",
    "license" :"Apache-2.0",
    "dependencies": { 
              "@adiwajshing/keyed-db": "^0.2.4",
