--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-   "name": "𝙆𝙄𝙉𝙂 𝙄𝘽𝙍𝘼𝙃𝙄𝙈 𝙈𝘿",
+   "name": "Gifted.tech",
    "version": "1.2.8-api",
    "description": "Multi device whatsapp bot developed by king Ibrahim.",
    "main": "lib/client.js",
@@ -10,7 +10,7 @@
              "stop": "pm2 stop Suhail"             
    },
    "keywords": ["whatsapp bot md","whatsapp bot","sc bot","sc wa bot","suhail md","suhail whatsapp bot","Suhail md bot","multidevice","baileys bot"],
-   "author": "IBRAHIM",
+   "author": "Gifted",
    "license" :"Apache-2.0",
    "dependencies": { 
              "@adiwajshing/keyed-db": "^0.2.4",
